Updated contact section

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,11 +1,12 @@
+___
 import { SEO } from "gatsby-theme-portfolio";
 import { Intro } from "gatsby-theme-portfolio";
 import { Skills } from "gatsby-theme-portfolio";
-import { Contact } from "gatsby-theme-portfolio";
+import Contact from "components/landing/Contact";
 import { Footer } from "gatsby-theme-portfolio";
 
 <SEO />
 <Intro />
-<Contact />
 <Skills />
+<Contact />
 <Footer />
