Updated missing projects section

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,12 +1,14 @@
 ___
 import { SEO } from "gatsby-theme-portfolio";
 import { Intro } from "gatsby-theme-portfolio";
+import { Projects } from 'gatsby-theme-portfolio'
 import { Skills } from "gatsby-theme-portfolio";
 import Contact from "components/landing/Contact";
 import { Footer } from "gatsby-theme-portfolio";
 
 <SEO />
 <Intro />
+<Projects />
 <Skills />
 <Contact />
 <Footer />
